@@ -123,6 +123,9 @@ test_that("mixed: anova with multiple mixed objexts", {
   sk_m3 <- lmer(response ~ instruction+(1|id)+(validity|content), sk2_aff, REML = FALSE)
   sk_m4 <- lmer(response ~ instruction+(1|id)+(validity|content), sk2_aff, REML = TRUE)
   t <- anova(sk_m1, sk_m2, sk_m3)
+  xx <- anova(sk_m1$full_model, sk_m2$full_model, sk_m3, model.names = c("sk_m1", "sk_m2", "sk_m3"))
+  expect_identical(rownames(xx), rownames(t))
+  expect_identical(rownames(xx), c("sk_m1", "sk_m2", "sk_m3"))
   expect_is(t, c("anova", "data.frame"))
   expect_is(anova(sk_m1, object = sk_m2, sk_m3), c("anova", "data.frame"))
   expect_is(anova(sk_m1, object = sk_m2, sk_m3, ks2013.3), c("anova", "data.frame"))
